<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="login">Login</string>
    <string name="lgin">Login Succesfull</string>
    <string name="logout">Logout</string>
    <string name="logout_sucessfull">Logout Sucessfull</string>
    <string name="button_clicked">button Clicked</string>
    <string name="times">Times</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="enter_number_1">Enter Number 1:</string>
    <string name="enter_number_2">Enter Number 2:</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
</resources>