<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#F1C9C9"

    >
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_calculator"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <EditText
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:id="@+id/num1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/enter_number_1"
        />
    <EditText
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:id="@+id/num2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/enter_number_2"/>

<LinearLayout
    android:layout_margin="20sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button

        android:layout_marginEnd="20sp"
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        />
    <Button

        android:layout_marginStart="20sp"
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        />
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="30sp"/>




</LinearLayout>